refactor(workflow): make remote task tracking nonblocking